# qbit_manage

./: .claude-session-name  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG  CLAUDE.md  DEVELOPER.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SUPPORTED_VERSIONS.json  VERSION  activate.sh  config.yml  config.yml.sample  deactivate.sh  entrypoint.sh  pyproject.toml  pytest.ini  qbit_manage.py  qbit_scripts.py  requirements-dev.txt  requirements.txt  ruff.toml  setup.py  test  tox.ini
.claude/: CLAUDE.md
.github/: FUNDING.yml  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1.bug_report.yml  2.feature_request.yml  3.docs_request.yml  bug_report.yml  config.yml  docs_request.yml
.github/workflows/: bump-version-develop.yml  bump_develop_version.yml  ci.yml  dependabot-approve-and-auto-merge.yml  develop.yml  docs.yml  label-conflicts.yml  labeler.yml  latest.yml  lock-threads.yml  pypi-publish.yml  release-pr.yml  secrets-scan.yml  tag.yml  tests.yml  update-develop-branch.yml  update-supported-versions.yml  version.yml
config/: config.yml.sample  config.yml.template
desktop/nsis-hooks/: installer.nsh
desktop/tauri/src/: index.html  logs.html  terminal.html
desktop/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/tauri/src-tauri/src/: main.rs
docs/: Commands.md  Config-Setup.md  Contributing.md  Docker-Installation.md  Home.md  Installation.md  Local-Installations.md  Nix-Installation.md  Standalone-Scripts.md  Unraid-Installation.md  Web-API.md  Web-UI.md  _Footer.md  _Sidebar.md  v4-Migration-Guide.md
icons/: qbm_logo.icns
modules/: __init__.py  apprise.py  auth.py  bhd.py  config.py  docker.py  logs.py  notifiarr.py  qbit_error_handler.py  qbittorrent.py  scheduler.py  torrent_hash_generator.py  util.py  web_api.py  webhooks.py
modules/core/: __init__.py  ban_peers.py  category.py  cross_seed.py  recheck.py  remove_cross_seed_tags.py  remove_orphaned.py  remove_unregistered.py  share_limits.py  tag_nohardlinks.py  tags.py
scripts/: ban_peers.py  capture_qbit_fixtures.py  delete_torrents_on_low_disk_space.py  edit_passkey.py  edit_tracker.py  mover.py  recyclebin_recovery.py  remove_cross-seed_tag.py  restore_torrents.py  sanitize_qbit_fixture.py  torrent_auto_delete.py  update-readme-version.py
scripts/pre-commit/: check_no_tracker_secrets.py  increase_version.sh  update-readme-version.sh  update_develop_version.sh
tests/: conftest.py  factories.py  test_config.py  test_config_cat_change.py  test_config_validation.py  test_nohardlinks_global_options.py  test_qbittorrent.py  test_redact_passkey.py  test_util.py
tests/core/: test_category.py  test_category_delay.py  test_recheck.py  test_remove_orphaned.py  test_remove_unregistered.py  test_share_limit_action.py  test_share_limits_cleanup.py  test_share_limits_grouping.py  test_share_limits_has_reached_seed_limit.py  test_share_limits_set_tags_and_limits.py  test_share_limits_suffix_tag_cleanup.py  test_share_limits_update.py  test_share_limits_update_group.py  test_tag_nohardlinks.py  test_tags.py
tests/fixtures/: README.md
tests/fixtures/qbit_api/: app_preferences.json  torrent_tags.json  torrent_trackers.json  torrents_info.json
web-ui/: README.md  index.html
web-ui/css/: components.css  main.css  responsive.css  themes.css
web-ui/css/components/: _accordion.css  _alert.css  _array-field.css  _badge.css  _buttons.css  _card.css  _close-icon-button.css  _command-panel.css  _complex-object-card.css  _documentation-viewer.css  _dropdown.css  _forms.css  _key-value-list.css  _log-viewer.css  _modal.css  _pagination.css  _scheduler-control.css  _share-limits.css  _skeleton.css  _tabs.css  _toast.css  _toggle-switch.css
web-ui/img/: site.webmanifest
web-ui/js/: api.js  app.js
web-ui/js/components/: SchedulerControl.js  command-panel.js  config-form.js  documentation-viewer.js  header.js  log-viewer.js  security.js  share-limits.js
web-ui/js/config-schemas/: cat.js  cat_change.js  commands.js  directory.js  file_ext_tags.js  file_extension.js  nohardlinks.js  notifications.js  orphaned.js  qbt.js  recyclebin.js  settings.js  share_limits.js  tracker.js
web-ui/js/utils/: categories.js  dom.js  form-renderer.js  history-manager.js  icons.js  modal.js  theme-manager.js  toast.js  utils.js
