[package]
name = "qbit-manage-desktop"
version = "0.1.0"
description = "Tauri desktop shell for qbit_manage with tray + minimize-to-tray and server lifecycle"
authors = ["qbit_manage"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["system-tray", "shell-open", "dialog-open", "clipboard-write-text"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time", "process"] }
tauri-plugin-single-instance = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
