[package]
name = "qbit-manage-desktop"
version = "0.1.0"
description = "Tauri desktop shell for qbit_manage with tray + minimize-to-tray and server lifecycle"
authors = ["qbit_manage"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

# Tauri 2 build script
[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri 2 crate
tauri = { version = "2", features = ["tray-icon"] }
# Plugins (v2)
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2"
# (clipboard + dialog now via separate plugins if later needed)

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "time", "process"] }

[features]
default = []
